removed several jacoco configuration as this seems to vanish the execution within maven surefire