@@ -301,49 +301,39 @@
 			<id>codeCoverage</id>
 			<properties>
 				<jacoco.version>0.5.6.201201232323</jacoco.version>
-
-				<jacoco.propertyName>coverageAgent</jacoco.propertyName>
-				<jacoco.destFile>../../releng/org.eclipse.xtext.todo.parent/target/jacoco.exec</jacoco.destFile>
-				<jacoco.it.destFile>../../releng/org.eclipse.xtext.todo.parent/target/jacoco_it.exec</jacoco.it.destFile>
-				<jacoco.append>true</jacoco.append>
-				<jacoco.includes>*</jacoco.includes>
-				<jacoco.excludes>org.eclipse.*:*.internal.*:*.antlr*:*.parseTree*:*SetupGenerated*:*Abstract*:*GrammarAccess*:*.mm.*:*com.google*</jacoco.excludes>
-				<jacoco.exclClassLoaders>sun.reflect.DelegatingClassLoader:org.powermock.core.classloader.MockClassLoader</jacoco.exclClassLoaders>
-				<jacoco.append>true</jacoco.append>				
-				<!--jacoco.sessionId>junit4runnerSession</jacoco.sessionId-->
-				<!--jacoco.dumpOnExit>true</jacoco.dumpOnExit-->
-				<!--jacoco.output>file</jacoco.output-->
-				<!--jacoco.address>localhost</jacoco.address-->
-				<!--jacoco.port>9999</jacoco.port-->
-
+				<jacoco.destFile>${project.basedir}/../../releng/org.eclipse.xtext.todo.parent/target/jacoco.exec</jacoco.destFile>
+				<jacoco.it.destFile>${project.basedir}/../../releng/org.eclipse.xtext.todo.parent/target/jacoco_it.exec</jacoco.it.destFile>
+				<!-- Sonar -->
 				<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 				<sonar.jacoco.reportPath>${jacoco.destFile}</sonar.jacoco.reportPath>
-				<sonar.jacoco.itReportPath>${jacoco.destFile}</sonar.jacoco.itReportPath>
+				<sonar.surefire.reportsPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.surefire.reportsPath>
+				<sonar.jacoco.itReportPath>${jacoco.it.destFile}</sonar.jacoco.itReportPath>
+				<!--sonar.skippedModules>plugin.tests</sonar.skippedModules-->				
 			</properties> 
 			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-surefire-plugin</artifactId>
-						<version>${tycho-version}</version>
-						<configuration>
-							<argLine>${coverageAgent} -Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-							<useUIHarness>false</useUIHarness>
-							<includes>
-								<include>**/*Test.java</include>
-							</includes>
-							<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
-						</configuration>
-					</plugin>
+				<plugins>			
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
 						<version>${jacoco.version}</version>
 						<executions>
 							<execution>
+								<id>pre-unit-test</id>
 								<goals>
 									<goal>prepare-agent</goal>
 								</goals>
+							</execution>
+							<execution>
+								<id>pre-integration-test</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${jacoco.it.destFile}</destFile>
+									<propertyName>it.coverage.argLine</propertyName>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
